--- a/index.html
+++ b/index.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Text Game Frontend</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<div class="container">
-    <div class="map-box" id="map">Map Loading...</div>
-    <div class="main-log" id="log"></div>
-    <pre class="ascii-art" id="ascii"></pre>
-    <div class="comms-box">
-        <div id="comms-log"></div>
-        <input type="text" id="command-input" placeholder="Enter command...">
-        <button onclick="sendCommand()">Send</button>
-    </div>
-    <div class="status-bars" id="status">
-        <div class="status-item">
-            <label>Health:</label>
-            <div class="status-bar"><div class="health-fill"></div></div>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>ExodusMUD</title>
+        <link rel="icon" href="https://www.genesismud.org/play/icons-31120ca82cf5b61401ea1bc4ca49dd09/apple-touch-icon-57x57.png">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
+        <script src="game.js" defer></script>
+    </head>
+
+    <body>
+        <div id="client" tabindex="-1">
+            <!-- Log and Input -->
+            <div id="main-content">
+                <!-- Log -->
+                <div id="log"></div>
+                <!-- Input field -->
+                <div id="command-input">
+                    <textarea autofocus spellcheck="false"></textarea>
+                </div>
+                <!-- Status Bars -->
+                <!--<div id="stat-bars">
+                    <div id="health-bar" >Health</div>
+                    <div id="mana-bar">Mana</div>
+                    <div id="fatigue-bar">Fatigue</div>
+                </div>-->
+            </div>
+            <!-- Map -->
+            <!--
+            <div id="sidebar">
+                <div id="map">
+                    Map
+                </div>
+                <div id="controls">
+                    Disconnect
+                    Settings
+                </div>
+            </div>
+            -->
         </div>
-    </div>
-</div>
-<script src="game.js"></script>
-</body>
+    </body>
 </html>
