--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div id="log"></div>
             <!-- Input field -->
             <div id="command-input">
-                <textarea autofocus spellcheck="false"></textarea>
+                <textarea id="input-field" autofocus spellcheck="false"></textarea>
             </div>
             <!-- Status Bars -->
             <!--<div id="stat-bars">
